--- a/sass/parts/_home-banner.scss
+++ b/sass/parts/_home-banner.scss
@@ -1,7 +1,7 @@
 #banner-container-home {
     display: flex;
     width: 100%;
-    margin: 10px auto;
+    margin: 0.2rem auto;
     align-items: center;
     justify-content: center;
 }
@@ -56,7 +56,13 @@
 @media only screen and (max-width: 600px) {
     #banner-container-home {
         display: block;
-        margin: 0 auto;
+        margin: 0em auto;
+        margin-bottom: 2rem;
+    }
+
+    .home-banner-header {
+        font-size: 2.2rem;
+        margin-bottom: 0;
     }
 
     .banner-home-img {
